1024px <= w < 1280px screens are now considered as large instead of extra-large 768px <= w < 1024px screens are now considered as small instead of large attempt for better panel animation performance on Chrome Mobile fix mdl upgradeElements/downgradeElements on elements without the children property fix startsWith/endsWith missing on IE11

--- a/src/components/layout.styl
+++ b/src/components/layout.styl
@@ -29,16 +29,14 @@
         transform-origin: left top
 
     .layout__overlay
-        display: none
+        // display: none
         position: absolute
         top: 0
-        left: 0
         width: 100%
         height: 100%
         background-color: #000
         content: ' '
         opacity: 0
-        visibility: hidden
         transition: all cubic-bezier(.25,.8,.25,1) .25s
 
     &[data-width=small]
@@ -52,36 +50,43 @@
             width: 83.33333333%
             height: 100%
 
+        > .layout__overlay-center,
         > .layout__left
             transform: translate3d(-100%, 0, 0)
             top: 0
             left: 0
 
+        > .layout__overlay-left,
         > .layout__right
             left: 100%
 
         &.layout-open-left
+            > .layout__overlay-center,
             > .layout__left
                 transform: translate3d(0, 0, 0)
 
             > .layout__overlay-center
-                display: block
-                visibility: visible
+                // display: block
                 opacity: 0.5
 
         &.layout-open-right
             > .layout__overlay-left
-                display: block
-                visibility: visible
+                // display: block
                 opacity: 0.5
 
-            &.layout-open-left > .layout__left
-                transform: translate3d(-100%, 0, 0)
+            &.layout-open-left
+                > .layout__overlay-center,
+                > .layout__left
+                    transform: translate3d(-100%, 0, 0)
 
+            > .layout__overlay-left,
             > .layout__right
                 transform: translate3d(-100%, 0, 0)
 
     &[data-width=large]
+        > .layout__overlay-center
+            display: none
+
         &.layout-has-left > .layout__content
             width: 76.5625%
             left: 23.4375%
@@ -93,6 +98,7 @@
         > .layout__left
             right: 76.5625%
 
+        > .layout__overlay-left,
         > .layout__right
             position: absolute
             left: 100%
@@ -100,14 +106,18 @@
 
         &.layout-open-right
             > .layout__overlay-left
-                display: block
-                visibility: visible
+                // display: block
                 opacity: 0.5
 
-        &.layout-open-right > .layout__right
-            transform: translate3d(-100%, 0, 0)
+        &.layout-open-right
+            > .layout__overlay-left,
+            > .layout__right
+                transform: translate3d(-100%, 0, 0)
 
     &[data-width=extra-large]
+        > .layout__overlay
+            display: none
+
         > .layout__left,
         > .layout__right
             width: 20%
