--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -12,6 +12,14 @@
     
     bottom: auto
 
+.dialog-polyfill-container
+    position: fixed
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    transform: scale(0)
+
 .input
     display: block
     position: relative
